--- a/es6/删除数组中值为5的.html
+++ b/es6/删除数组中值为5的.html
@@ -143,9 +143,10 @@
         var y
         var obj = { a: 1, b: 2 }
         for (y in obj) {
-            console.log(y + '----属性')
-            console.log(obj.a + '是属性值');
-            console.log(obj.b + '是属性值')
+            console.log(obj[y])
+            // console.log(y + '----属性')
+            // console.log(obj.a + '是属性值');
+            // console.log(obj.b + '是属性值')
         }
 
 
