--- a/es6/动画.html
+++ b/es6/动画.html
@@ -8,7 +8,9 @@
             height: 100px;
             background: red;
             position: relative;
-            /* animation: name(动画名称) duration（完成动画需要的时间） timing-function（动画速度曲线） delay（规定动画开始前的延迟时间） iteration-count（贵定动画播放的次数） direction（是否轮流播放）; */
+            /* animation: name(动画名称) duration（完成动画需要的时间） 
+            timing-function（动画速度曲线） delay（规定动画开始前的延迟时间） 
+            iteration-count（规定动画播放的次数） direction（是否轮流播放）; */
             animation: myfirst 5s linear 2s infinite alternate;
             /* Firefox: */
             -moz-animation: myfirst 5s linear 2s infinite alternate;
