--- a/组件/2-组件通信.html
+++ b/组件/2-组件通信.html
@@ -32,7 +32,8 @@
 			// },
 
 			// 组件中的data必须是函数
-			// 每个组件都是相互独立的，如果他们共用一个对象，在更改一个组件数据的时候，会影响其他组件， 如果是函数的话，每个组件都有自己独立的数据，相互之间不会影响
+			// 每个组件都是相互独立的，如果他们共用一个对象，在更改一个组件数据的时候，会影响其他组件， 
+			// 如果是函数的话，每个组件都有自己独立的数据，相互之间不会影响
 			data() {
 				return { // return 的是属于自己的对象
 					selectShow: false,
